Global: Fix textarea scrollbar cursor

--- a/github-dark.css
+++ b/github-dark.css
@@ -3572,6 +3572,7 @@
   }
   .upload-enabled textarea {
     border-bottom: 1px dashed #444 !important;
+    cursor: auto !important;
   }
   /* history expand buttons */
   .commit .minibutton.expander-minibutton span {
@@ -3914,6 +3915,9 @@
   }
   .CodeMirror-scrollbar-filler {
     background: #1d1d1d !important;
+  }
+  textarea {
+    cursor: auto !important;
   }
   /* rules for the new responsive layout */
   @media (max-width: 767px) {
